# simple-wake-word

./: SimpleWakeWords.py  main.py  pyproject.toml  train.py
